post alignment issue and infinite scroll issue fix

--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -239,7 +239,7 @@
 }
 
 .postboxmobile{
-    width: 217%;
+    width: 221%;
     margin-left: 5%;
     margin-bottom:36px 
 }
